# atlas

./: .env  .gitignore  Cargo.toml  test_bug.rs
app/: Cargo.toml
app/src/: analyzer.rs  main.rs  optimizer.rs  strategy_factory.rs  tracing_layer.rs
config/: base.toml  development.toml  live.toml  optimizer.toml
crates/analytics/: Cargo.toml
crates/analytics/src/: engine.rs  lib.rs  types.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: error.rs  lib.rs  live_connector.rs  types.rs
crates/app-config/: Cargo.toml
crates/app-config/src/: error.rs  lib.rs  types.rs
crates/backtester/: Cargo.toml
crates/backtester/src/: lib.rs  logger.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs  strategy.rs  types.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: bot.rs  lib.rs  reconciler.rs  strategy_factory.rs  task.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: error.rs  lib.rs  live.rs  simulated.rs  types.rs
crates/risk/: Cargo.toml
crates/risk/src/: error.rs  lib.rs  simple_manager.rs  types.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: factory.rs  lib.rs  ma_crossover.rs  prob_reversion.rs  supertrend.rs  types.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: error.rs  lib.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/layouts/: AdminLayout.tsx
frontend/src/components/shared/: ConnectionStatus.tsx
frontend/src/hooks/: useAtlasSocket.ts
frontend/src/pages/: BacktestDetailsPage.tsx  BacktestListPage.tsx  OptimizationDetailsPage.tsx  OptimizationsListPage.tsx
migrations/: 20250716201423_create_klines_table.down.sql  20250716201423_create_klines_table.up.sql  20250717121349_add_interval_to_klines.down.sql  20250717121349_add_interval_to_klines.up.sql  20250717224510_create_backtest_tables.down.sql  20250717224510_create_backtest_tables.up.sql  20250717230756_create_trades_table.down.sql  20250717230756_create_trades_table.up.sql  20250717233725_create_optimization_jobs_table.down.sql  20250717233725_create_optimization_jobs_table.up.sql  20250718000450_create_optimization_summaries_table.down.sql  20250718000450_create_optimization_summaries_table.up.sql  20250718105314_create_equity_curves_table.down.sql  20250718105314_create_equity_curves_table.up.sql
