[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
app-config = { path = "../crates/app-config" }
core-types = { path = "../crates/core-types" }
api-client = { path = "../crates/api-client" }
database = { path = "../crates/database" }
web-server = { path = "../crates/web-server" }
risk = { path = "../crates/risk" }
engine = { path = "../crates/engine" }
strategies = { path = "../crates/strategies" }
execution = { path = "../crates/execution" }
rust_decimal_macros = "1.34"
rust_decimal = "1.34"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
# Add these lines for logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
config = { version = "0.15.13", features = ["toml"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
backtester = { path = "../crates/backtester" }
itertools = "0.14"
toml = "0.9.2"
rayon = "1.8"
analytics = { path = "../crates/analytics" }
events = { path = "../crates/events" }
serde_json = "1.0"