[package]
name = "api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"

app-config = { path = "../app-config" }
core-types = { path = "../core-types" }

# Add external crates
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
rust_decimal = "1.33"
hex = "0.4"
chrono = "0.4"