[package]
name = "app-config"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
config = { version = "0.15.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
strategies = { path = "../strategies" }
risk = { path = "../risk" }
execution = { path = "../execution" }