[package]
name = "backtester"
version = "0.1.0"
edition = "2024"

[dependencies]
core-types = { path = "../core-types" }
strategies = { path = "../strategies" }
risk = { path = "../risk" }
execution = { path = "../execution" }

# We will need these for logging and error handling
tracing = "0.1"
anyhow = "1.0"
rust_decimal_macros = "1.34"
chrono = "0.4"
num-traits = "0.2"
rust_decimal = "1.34"