[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
core-types = { path = "../core-types" }
strategies = { path = "../strategies" }
risk = { path = "../risk" }
execution = { path = "../execution" }
api-client = { path = "../api-client" }
database = { path = "../database" }
app-config = { path = "../app-config" }

# We will need these for the async loop and logging
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
anyhow = "1.0"
rust_decimal_macros = "1.37.1"
rust_decimal = "1.37.2"
events = { version = "0.1.0", path = "../events" }
