[package]
name = "execution"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
core-types = { path = "../core-types" }
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
num-traits = "0.2"
tokio = { version = "1", features = ["sync"] }
web-server = { path = "../web-server" }
events = { path = "../events" }
api-client = { path = "../api-client" }
tracing = "0.1"
