[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
app-config = { path = "../app-config" }
core-types = { path = "../core-types" }
database = { path = "../database" }
analytics = { path = "../analytics" }
risk = { path = "../risk" }
strategies = { path = "../strategies" }

# The web framework and async runtime
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

# Utilities for middleware (CORS, tracing)
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serde for JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database access for API types
sqlx = { version = "0.8", features = ["macros", "bigdecimal", "chrono", "json"] }

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
chrono = "0.4.41"
rust_decimal = "1.37.2"
futures = "0.3.31"
events = { version = "0.1.0", path = "../events" }
